--- a/templates/Base_files/Base_Article.html
+++ b/templates/Base_files/Base_Article.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Table_content.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Root.css' %}">
+    <script src="{% static 'Table_content.js' %}" defer></script>
 </head>
 <body>
 
