--- a/static/styles/Text.css
+++ b/static/styles/Text.css
@@ -72,15 +72,16 @@ a.lblue-link:hover {
 .word-box-container {
     display: flex;
     justify-content: center; /* Center the box within the container */
-    max-width: 80%; /* Matches the max-width of other sections */
+    max-width: 85%; /* Matches the max-width of other sections */
     margin: 0 auto; /* Centers the container */
     z-index: 1;
     position: relative;
+    padding-bottom: 10px;
 }
 
 .word-box-item {
     background-color: rgba(61,178,201,255);
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: 0 8px 20px var(--shadow-medium);
     padding: 20px 30px; /* Adjusted padding for equal spacing */
     max-width: 100%; /* Ensure the box takes the full width within the container */
@@ -100,15 +101,15 @@ a.lblue-link:hover {
     margin-bottom: 15px;
 }
 
-.word-box-header i {
-    font-size: 2rem;
+.word-box-header i { /* font-size:2rm before */
+    font-size: var(--font-size-h4);
     color: var(--primary-yellow);
     margin-right: 10px;
 }
 
-.word-box-header h3 {
+.word-box-header h4 {
     color: var(--primary-dark-blue);
-    font-size: 2rem;
+    font-size: font-size: (--font-size-h4);
     margin: 0;
 }
 
@@ -144,15 +145,17 @@ a.lblue-link:hover {
 .imp-box-container {
     display: flex;
     justify-content: center;
-    max-width: 80%;
+    max-width: 85%;
     margin: 0 auto;
     z-index: 1;
     position: relative;
+    padding-bottom: 10px;
+
 }
 
 .imp-box-item {
     background-color: var(--primary-dark-blue);
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: 0 8px 20px var(--shadow-medium);
     padding: 20px 30px;
     max-width: 100%;
@@ -172,15 +175,15 @@ a.lblue-link:hover {
     margin-bottom: 15px;
 }
 
-.imp-box-header i {
-    font-size: 2rem;
+.imp-box-header i {  /* font-size:2rm before */
+    font-size: var(--font-size-h4);
     color: var(--primary-yellow);
     margin-right: 10px;
 }
 
-.imp-box-header h3 {
+.imp-box-header 4 {
     color: var(--text-light);
-    font-size: 2rem;
+    font-size: font-size: (--font-size-h4);
     margin: 0;
 }
 
@@ -216,15 +219,17 @@ a.lblue-link:hover {
 .art-box-container {
     display: flex;
     justify-content: center;
-    max-width: 80%;
+    max-width: 85%;
     margin: 0 auto;
     z-index: 1;
     position: relative;
+    padding-bottom: 10px; /* Adds space inside the container */
+
 }
 
 .art-box-item {
     background-color: var(--primary-yellow);
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: 0 8px 20px var(--shadow-medium);
     padding: 20px 30px;
     max-width: 100%;
@@ -245,14 +250,14 @@ a.lblue-link:hover {
 }
 
 .art-box-header i {
-    font-size: 2rem;
+    font-size: var(--font-size-h4);
     color: var(--primary-dark-blue);
     margin-right: 10px;
 }
 
-.art-box-header h3 {
+.art-box-header h4 {
     color: var(--primary-dark-blue);
-    font-size: 2rem;
+    font-size: (--font-size-h4);
     margin: 0;
 }
 
