--- a/templates/Statistics/ST_p_value.html
+++ b/templates/Statistics/ST_p_value.html
@@ -3,28 +3,7 @@
 {% block title %} P-Value - Learning Hub {% endblock %}
 
 {% block content %}
-<style>
-    /* Wrapper for main content area */
-    .content-wrapper {
-        max-width: 900px; /* Limits content width to 900px */
-        margin: 0 auto; /* Centers the content horizontally */
-        padding: 10px; /* Adds padding around the content */
-    }
 
-    /* Styling for h3 headers */
-    h3 {
-        border-bottom: 2px solid #1BA5BF; /* Adds bottom border for emphasis */
-    }
-
-
-</style>
-
-<aside class="table-of-contents">
-    <h2>Contents</h2>
-    <ul id="toc-list">
-        <!-- JavaScript will populate TOC items here based on headings -->
-    </ul>
-</aside>
 
 <section class="dark-blue-box">
             <h3>What is a P-Value?</h3>
@@ -94,6 +73,10 @@
         <div>
             <label for="flips">Number of Flips per Experiment:</label>
             <input type="number" name="flips" class="custom-input" min="1" max="150" value="10" required>
+        </div>
+        <div>
+            <label for="observed">Observed Number of Heads:</label>
+            <input type="number" name="observed" class="custom-input" min="1" max="150" value="0.5" required>
         </div>
         <div>
             <label for="probability">Probability of Heads:</label>
