--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -25,11 +25,11 @@
         <div class="contact-container">
             <div class="contact-left">
                 <h2>Let's Connect</h2>
-                <p>We'd love to hear from you! Whether you're curious about our services, need help with a project, or just want to chat, we're here to listen.</p>
-                <p>Drop us a message and let's start a conversation.</p>
+                <p>I'd love to hear from you! If you have any feedback, need help with a project, or just want to chat, I'am here to listen.</p>
+                <p>Drop me a message and let's start a conversation.</p>
             </div>
             <div class="contact-right">
-                <h2>Contact Us</h2>
+                <h2>Connect</h2>
                 <form action="/action_page.php" target="_blank">
                     <label for="name">Name *</label>
                     <input type="text" id="name" name="name" required>
