--- a/templates/Base_files/Navbar.html
+++ b/templates/Base_files/Navbar.html
@@ -27,8 +27,8 @@
                     <a href="/statistics">Statistics</a>
                     <!-- Second-level Dropdown Menu -->
                     <ul class="more-sub-menu">
-                        <li><a href="/statistics/linear regression">Linear Regression</a></li>
-                        <li><a href="/statistics/p-value">P-value</a></li>
+                        <li><a href="/statistics/introduction to statistics/">Introduction to Statistics</a></li>
+                        <li><a href="/statistics/descriptive statistics/">Descriptive Statistics</a></li>
                         <li><a href="/statistics">More</a></li>
                     </ul>
                 </li>
