Search implementation, Forms and Carousel

--- a/templates/Base_files/Base_Article.html
+++ b/templates/Base_files/Base_Article.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'styles/hero.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Table_content.css' %}">
     <link rel="stylesheet" href="{% static 'styles/Root.css' %}">
-    <script src="{% static 'Table_content.js' %}" defer></script>
+    <script src="{% static 'scripts/Table_content.js' %}" defer></script>
 </head>
 
 <style>
