--- a/templates/Base_files/Footer.html
+++ b/templates/Base_files/Footer.html
@@ -6,7 +6,7 @@
     <footer>
         <p>&copy; 2024 Biology & Genetics Hub. All rights reserved.</p>
         <div class="social-icons">
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/catalina-manduta/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
 
         </div>
     </footer>
