--- a/static/styles/Root.css
+++ b/static/styles/Root.css
@@ -30,6 +30,7 @@
 
       /* Font Sizes */
     --font-size-h4: 1.4rem; /* Font size for h4 elements */
+    --font-size-p: 1.2rem;
 }
 
 /* Colors: Dark blue:#15688a, dark white #f5f5f5, yellow:#e2e1d2, light blue:#1ba5bf  */
