--- a/templates/Statistics/ST_Introduction_ST.html
+++ b/templates/Statistics/ST_Introduction_ST.html
@@ -2,6 +2,10 @@
 
 {% block title %} Introduction to Statistics - Learning Hub {% endblock %}
 
+<!-- Metadata for Search -->
+<meta name="title" content="Introduction to Statistics">
+<meta name="url" content="/statistics/introduction-to-statistics/">
+
 {% block content %}
 
 <section class="dark-blue-box">
