--- a/templates/Statistics/ST_Linear_regression.html
+++ b/templates/Statistics/ST_Linear_regression.html
@@ -2,7 +2,8 @@
 {% extends 'Base_files/Base_Article.html' %}
 
 {% block title %} Linear Regression - Learning Hub {% endblock %}
-
+<meta name="title" content="Linear Regression">
+<meta name="url" content="/statistics/linear regression/">
 {% block content %}
 
 <section class="dark-blue-box">
