--- a/templates/Statistics/ST_p_value.html
+++ b/templates/Statistics/ST_p_value.html
@@ -1,7 +1,8 @@
 {% extends 'Base_files/Base_Article.html' %}
 
 {% block title %} P-Value - Learning Hub {% endblock %}
-
+<meta name="title" content="P-Value">
+<meta name="url" content="/statistics/p-value/">
 {% block content %}
 
 
