--- a/templates/Statistics/ST_Descriptive_ST.html
+++ b/templates/Statistics/ST_Descriptive_ST.html
@@ -1,6 +1,10 @@
 {% extends 'Base_files/Base_Article.html' %}
 
 {% block title %} Descriptive Statistics - Learning Hub {% endblock %}
+<!-- Metadata for Search -->
+
+<meta name="title" content="Descriptive Statistics">
+<meta name="url" content="/statistics/descriptive statistics/">
 
 {% block content %}
 
