--- a/templates/Statistics/ST_Linear_regression.html
+++ b/templates/Statistics/ST_Linear_regression.html
@@ -104,6 +104,16 @@
 <section class="dark-blue-box">
     <h3>Playground</h3>
     <h4>User-Interactive Linear Regression</h4>
+    <p>
+    Explore the playground where you your own values in order to analyze and investigate your dataset.
+    Hover over the plots to discover additional insights and details.
+    Feel free to download the plots for your personal use or projects.
+    </p>
+        <br>
+    <p><strong>Sidenote:</strong> It accepts only numbers (int, float), both datasets should have the same amount of datapoints, you cannot exceed 1000 datapoints.
+    </p>
+
+    <br>
 
     {% if error_message %}
     <div style="color: red; font-weight: bold; margin-bottom: 10px;">
