--- a/templates/Statistics/ST.html
+++ b/templates/Statistics/ST.html
@@ -8,23 +8,35 @@
         <h2>Statistics</h2>
     </section>
 
-<!-- Article List Section -->
 <section class="white-box">
-    <h3>Explore</h3>
     <div class="yellow-box-container">
-        {% for article in articles %}
+        {% for article in page_obj %}
             <!-- Dynamic Article Item -->
             <div class="yellow-box-item">
                 <h4>{{ article.title }}</h4>
                 <p>{{ article.summary }}</p>
-                <a href="{{ article.get_absolute_url}}">Read More</a>
+                <a href="{{ article.get_absolute_url }}">Read More</a>
             </div>
         {% empty %}
             <p>No articles available in this category.</p>
         {% endfor %}
     </div>
+    <!-- Pagination Controls -->
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">First</a>
+            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+    </div>
 </section>
 
-
 {% endblock %}
-
