--- a/templates/About me.html
+++ b/templates/About me.html
@@ -368,7 +368,7 @@
 </div>
     <button class="next" onclick="plusSlides(1, 'personal-slide')">❯</button>
 </section>
-
+</div>
 </body>
 
     <!-- Footer -->
